--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,31 @@ hr{
     border-radius: 20px;
     font-size: 15px;
 }
+
+/* ---------------------------
+       media quary
+---------------------------- */
+/* ------------------mobile devices---------------------- */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .player-list, .blog-all, .all-courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player-detail, .blog{
+        flex-direction: column;
+    }
+}
+/* --------------------------------------tablet devices---------------------------------- */
+@media only screen and (min-width:689px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .player-list, .all-courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blog-all{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
